Add divide by 0 suggestion

--- a/project3.ipynb
+++ b/project3.ipynb
@@ -35,6 +35,10 @@
     "\n",
     "All wells have a radius of $r_w = 0.25$ ft and negligible skin factor.\n",
     "\n",
+    "### Suggestion\n",
+    "\n",
+    " * Because the file [`Neckelik_poro.dat`](Nechelik_poro.dat) has zero porosity values for those grids outside the true reservoir domain, you may get a \"divide by 0\" error when updating the saturations with the explicit equation.  Please take a look at this [StackOverflow answer](https://stackoverflow.com/questions/26248654/numpy-return-0-with-divide-by-zero) for a hint at how to avoid this.\n",
+    "\n",
     "## Testing\n",
     "\n",
     "There are no locally available tests for this project, but if your `TwoPhaseFlow` class passed all tests from [Homework Assignment 20](https://github.com/PGE323M-Fall2018/assignment20) you can be reasonably assured it will work correctly.  Tests will be run on Travis and you will recieve feedback on whether they are passing or not upon submission. You can continue to resubmit until the deadline.\n",
