--- a/project3.ipynb
+++ b/project3.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "to help you determine if your code is working correctly.\n",
     "\n",
-    "As you know, the actual Nechelik field has an irregular geometry as shown in the figure, with maximum $d = 100$ ft, $h = 5753$ ft and maximum $L = 7060.5$ ft. There are $N = 1188$ values in the data files corresponding to $N_x$ = 54 and $N_y$ = 22 grids to be used in the reservoir.  The reservoir has constant properties $\\mu_w = \\mu_o = 1$ cp, $B_w = B_o = 1$, $c_o = c_w = 1 \\times 10^{-5}$ psi$^{-1}$, an inital reservoir pressure of $p_{\\mbox{initial}} = 3700$ psi, and an initial water satruation $S_{wi} = 0.2$.  The Corey-Brooks properties are included in the [input.yml](input.yml) file.\n",
+    "As you know, the actual Nechelik field has an irregular geometry as shown in the figure, with maximum $d = 100$ ft, $h = 5753$ ft and maximum $L = 7060.5$ ft. There are $N = 1188$ values in the data files corresponding to $N_x$ = 54 and $N_y$ = 22 grids to be used in the reservoir.  The reservoir has constant properties $\\mu_w = \\mu_o = 1$ cp, $B_w = B_o = 1$, $c_o = c_w = 1 \\times 10^{-5}$ psi$^{-1}$, an inital reservoir pressure of $p_{\\mbox{initial}} = 3700$ psi, and an initial water satruation $S_{wi} = 0.2$.  The Corey-Brooks properties are included in the [inputs.yml](inputs.yml) file.\n",
     "\n",
     "The reservoir has the following wells\n",
     "\n",
