--- a/project3.ipynb
+++ b/project3.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "## Backup Plan\n",
     "\n",
-    "If you cannot get this project to work, you may work the project in CMG for 1/2 credit.  If you choose to do this, please add your CMG input file, names as `project3.dat` and export the pressures at the end of 200 days to a file `pressure.out` and the saturations to a file `saturation.out`.  Add the three files to this repository and upload it to Github.  These will be graded manually."
+    "If you cannot get this project to work, you may work the project in CMG for 1/2 credit.  If you choose to do this, please add your CMG input file, names as `project3.dat` and export the pressures at the end of 200 days to a file `pressure.txt` and the saturations to a file `saturation.txt`.  Add the three files to this repository and upload it to Github.  These will be graded manually."
    ]
   },
   {
